--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,38 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-.next
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
-/idea
-/.idea
 
 # misc
 .DS_Store
-.env
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
+
 package-lock.json
+
+
