--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "primereact-nextjs-quickstart",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.2.0",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
-    "file-loader": "^4.2.0",
-    "next": "^9.0.5",
-    "next-compose-plugins": "^2.2.0",
-    "primeicons": "2.0.0",
-    "primereact": "3.1.9",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "url-loader": "^2.1.0"
+    "next": "10.0.9",
+    "primeicons": "4.1.0",
+    "primereact": "6.1.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
