--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "classnames": "^2.2.6",
     "next": "10.0.9",
     "primeicons": "4.1.0",
-    "primereact": "6.1.0",
+    "primereact": "^6.2.1",
+    "primeflex": "2.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-transition-group": "^4.4.1"
   }
 }
